@@ -247,6 +247,9 @@ EXTRA_DIST = \
 	dbugarray1.awk \
 	dbugarray1.in \
 	dbugarray1.ok \
+	dbugarray2.awk \
+	dbugarray2.in \
+	dbugarray2.ok \
 	dbugeval.in \
 	dbugeval.ok \
 	dbugeval2.awk \
@@ -1577,7 +1580,7 @@ GAWK_EXT_TESTS = \
 	symtab11 symtab12 timeout typedregex1 typedregex2 typedregex3 \
 	typedregex4 typedregex5 typedregex6 typeof1 typeof2 typeof3 \
 	typeof4 typeof5 typeof6 unicode1 watchpoint1 \
-	re_test typeof7 typeof8 dbugarray1
+	re_test typeof7 typeof8 dbugarray1 dbugarray2
 
 ARRAYDEBUG_TESTS = arrdbg
 
@@ -1602,7 +1605,7 @@ SHLIB_TESTS = \
 
 # List of the tests which should be run with --debug option:
 NEED_DEBUG = dbugtypedre1 dbugtypedre2 dbugeval2 dbugeval3 dbugeval4 \
-	     dbugarray1
+	     dbugarray1 dbugarray2
 
 # List of the tests which should be run with --lint option:
 NEED_LINT = \
