@@ -1,0 +1,4 @@
+BEGIN {
+	c[1][1] = 11
+	c[1][2] = 12
+}
