@@ -1,0 +1,3 @@
+run
+print @c
+quit
