@@ -1,0 +1,4 @@
+Starting program:
+Program exited normally with exit value: 0
+c["1"]["1"] = 11
+c["1"]["2"] = 12
