@@ -1,3 +1,7 @@
+2023-12-21         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.tst: Regenerated.
+
 2023-12-12  Eli Zaretskii  <eliz@gnu.org>
 
 	* gawkmisc.pc (optimal_bufsize): Return DEFBLKSIZE for directories
