@@ -1,3 +1,8 @@
+2023-12-21         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test: dbugarray2.
+	* dbugarray2.awk, dbugarray2.in, dbugarray2.ok: New files.
+
 2023-12-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): New test: dbugarray1.
