@@ -1,5 +1,14 @@
 2023-12-21         Arnold D. Robbins     <arnold@skeeve.com>
 
+	Fix multidimensional array printing in the debugger, again.
+	Thanks again to Hermann Peifer for the report.
+
+	* debug.c (print_array): Maintain a stack of array names
+	and indexes, and print it when printing the value.
+	(print_array_names): New function.
+
+2023-12-21         Arnold D. Robbins     <arnold@skeeve.com>
+
 	Try to close a race condition window on SIGPIPE. See the thread at
 	https://lists.gnu.org/archive/html/bug-gawk/2023-12/msg00011.html.
 	Thanks to Andreas Schwab <schwab@suse.de>.
